# amhello

./: Makefile.am  configure.ac
src/: hello.c  whine.c
