## Process this file with automake to produce Makefile.in 
ACLOCAL_AMFLAGS = -I m4 --install
bin_PROGRAMS = hello			# [List programs to be installed in "bin" directory] = [List of "targets"]
hello_SOURCES = hello.c whine.c whine.h	# Lists sources files needed to generate target "hello"
EXTRA_DIST = m4/NOTES

